# phosphor-data-sync

./: README.md  meson.build
config/: README.md  meson.build
config/data_sync_list/: common.json  open-power.json
config/rsync/: bmc0_rsyncd.conf.in  bmc1_rsyncd.conf.in  rsyncd.conf.in
config/schema/: example.json  schema.json
config/stunnel/: bmc0_stunnel.conf.in  bmc1_stunnel.conf.in
scripts/: gen_rsync_stunnel_cfg.sh  meson.build  update_sibling_bmc_ip.sh
service_files/: SyncBMCData_rsync.service  SyncBMCData_stunnel.service  meson.build
src/: async_command_exec.cpp  async_command_exec.hpp  data_sync_config.cpp  data_sync_config.hpp  data_watcher.cpp  data_watcher.hpp  error_log.cpp  error_log.hpp  external_data_ifaces.cpp  external_data_ifaces.hpp  external_data_ifaces_impl.cpp  external_data_ifaces_impl.hpp  manager.cpp  manager.hpp  meson.build  notify_service.cpp  notify_service.hpp  notify_sibling.cpp  notify_sibling.hpp
src/datasynctool/: config_options.cpp  config_options.hpp  dbus_interactions.cpp  dbus_interactions.hpp  main.cpp  meson.build  utils.cpp  utils.hpp
test/: data_sync_config_test.cpp  full_sync_test.cpp  immediate_sync_test.cpp  manager_test.cpp  meson.build  mock_ext_data_ifaces.hpp  notify_service_test.cpp  notify_sibling_test.cpp  periodic_sync_test.cpp
